2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWin32Dll.c:   See also: [Patch 1910041] and [Patch 3059922]. SEH emulation
	on Win64 was not correct here: it sometimes results in a crash. Contrary to the
	other places, the code here is not meant to protect from OS bugs, but to protect
	Finalizing Tk when the application went in an invalid state.

2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4: Better building on OpenBSD.
	* unix/configure: (autoconf-2.59)

2010-12-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:               Fix manifest-generation for 64-bit gcc (mingw-w64)
	* win/configure:            (autoconf-2.59)

2010-12-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkSelect.c:     [Bug 3129527]: Fix buffer overflow w/ GCC 4.5 and
	* generic/tkTextDisp.c    -D_FORTIFY_SOURCE=2
	* unix/tkUnixWm.c
	* win/tkWinWm.c

2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:      [Patch #3116490] cross-compile support for unix
	* unix/configure    (autoconf-2.59)

2010-12-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4           [Patch #3116490] cross-compile Tcl mingw32 on unix
	* win/configure        This makes it possible to cross-compile Tcl/Tk for
	Windows (either 32-bit or 64-bit) out-of-the-box on UNIX, using mingw-w64
	build tools.

2010-12-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkInt.decls (TkDrawAngledTextLayout,TkDrawAngledChars,...):
	Expose angled text API for Emiliano Gavilan. Still only in internal
	stub table.

2010-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkAtom.c:    Fix various 64-bit gcc(-4.5.2) warnings: cast
	* generic/tkSelect.c:  from pointer to integer of different size.
	* win/stubs.c:
	* win/tkWinButton.c:
	* win/tkWinColor.c:
	* win/tkWinPixmap.c:
	* win/tkWinScrlbr.c:
	* win/tkWinWindow.c:
	* win/tkWinWm.c:
	* win/ttkWinMonitor.c:
	* win/tkWin32Dll.c:   Make assembler code compile in Win64 with gcc.
